AX: Grids/tables are not resilient to invalid Row->Cell hierarchy https://bugs.webkit.org/show_bug.cgi?id=266680 rdar://118938262

Reviewed by Chris Fleizach.

Our AX tree structure for tables is not resilient for a common authoring error where
table rows are not the direct unignored parent of table cells. This markdown does
not follow the spec (https://www.w3.org/TR/wai-aria-1.1/#gridcell), but is used
by authors regardless. This has shown be the cause of missing content in a variety
of tables.

To be more resilient to these errors, this patch makes all objects that are between
cells and their parent rows ignored. A new test was added to verify this behavior.

* LayoutTests/accessibility/grid-row-authoring-error-ignored.html: Added.
* LayoutTests/platform/glib/accessibility/grid-row-authoring-error-ignored-expected.txt: Added.
* LayoutTests/platform/mac/accessibility/grid-row-authoring-error-ignored-expected.txt: Added.
* Source/WebCore/accessibility/AXCoreObject.h:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::computeAncestorFlags const):
(WebCore::AccessibilityObject::matchesAncestorFlag const):
(WebCore::AccessibilityObject::isInRow const):
(WebCore::AccessibilityObject::ignoredByRowAncestor const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored const):

Canonical link: https://commits.webkit.org/272447@main